# Support

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  _architectures_8hpp.html  _architectures_8hpp_source.html  _bit_scan_forward_8hpp.html  _bit_scan_forward_8hpp_source.html  _compilers_8hpp.html  _compilers_8hpp_source.html  _date_time_8hpp.html  _date_time_8hpp_source.html  _debug_8hpp.html  _debug_8hpp_source.html  _flags_8hpp.html  _flags_8hpp_source.html  _g_l_f_w_8hpp.html  _g_l_f_w_8hpp_source.html  _intrinsics_8hpp.html  _intrinsics_8hpp_source.html  _module_a_p_i_8hpp.html  _module_a_p_i_8hpp_source.html  _open_g_l_8hpp.html  _open_g_l_8hpp_source.html  _platforms_8hpp.html  _platforms_8hpp_source.html  _pragma_8hpp.html  _pragma_8hpp_source.html  _stringify_8hpp.html  _stringify_8hpp_source.html  _version_8hpp.html  _version_8hpp_source.html  _vulkan_8hpp.html  _vulkan_8hpp_source.html  _windows_8hpp.html  _windows_8hpp_source.html  annotated.html  (+18 more)
.github/workflows/: doxygen.yml  test_macos.yml  test_unix.yml  test_windows.yml
Cmd/: UpdateSrcRepo.bat  UpdateSrcRepo.sh
Doc/: GenerateDoc.bat  GenerateDoc.sh  doxygen.config
Include/SA/Support/: Architectures.hpp  Compilers.hpp  Debug.hpp  Flags.hpp  Intrinsics.hpp  ModuleAPI.hpp  Platforms.hpp  Pragma.hpp  Stringify.hpp  Version.hpp
Include/SA/Support/API/: GLFW.hpp  OpenGL.hpp  Vulkan.hpp  Windows.hpp
Include/SA/Support/Algorithms/: BitScanForward.hpp  DateTime.hpp
Include/SA/Support/Variadics/: Flags.hpp  Flags.inl  IntSize.hpp
Source/SA/Support/Algorithms/: DateTime.cpp
Tests/: CMakeLists.txt
Tests/Prototype/: CMakeLists.txt  main.cpp
Tests/UnitTests/: CMakeLists.txt  Flags.cpp  main.cpp
Tests/UnitTests/Algorithms/: BitScanForwardTests.cpp  DateTimeTests.cpp
Tests/UnitTests/Variadics/: FlagsTests.cpp
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
